rafael costa: mosquitto broker files

--- a/ankaios/mosquitto/config/mosquitto.conf
+++ b/ankaios/mosquitto/config/mosquitto.conf
@@ -1,5 +1,16 @@
+# The mqtt broker will accept user connections without username and password
 allow_anonymous true
+
+# The port and ipaddress the mqtt broker will listen for packets, this instruction
+# can be repeated multiple times to add more ports and ip addresses
 listener 1883 0.0.0.0
+
+# Persist all the data stored in the mqtt broker, the data is stored
+# when the mqtt broker stops and is loaded when it starts
 persistence true
+
+# Persistence location
 persistence_location /mosquitto/data/
+
+# File location where the mqtt broker will store the logs
 log_dest file /mosquitto/log/mosquitto.log
