mqtt5/feature: uStreamer testing - creating a zenoh uEntity to publish messages to the uURI 'up://hpc/0xB1DA/1/8001' simulating the hpc authority message sending.

--- a/uprotocol/zenoh-subscriber/Cargo.toml
+++ b/uprotocol/zenoh-subscriber/Cargo.toml
@@ -1,7 +1,15 @@
 [package]
-name = "zenoh-subscriber"
+name = "zenoh-examples"
 version = "0.1.0"
 edition = "2024"
+
+[[bin]]
+name = "zenoh_publisher"
+path = "src/publisher.rs"
+ 
+[[bin]]
+name = "zenoh_subscriber"
+path = "src/main.rs"
 
 [dependencies]
 async-trait = { version = "0.1" }
