zenoh: Refactoring subscriber implementation file

--- a/uprotocol/zenoh-subscriber/Cargo.toml
+++ b/uprotocol/zenoh-subscriber/Cargo.toml
@@ -9,7 +9,7 @@ path = "src/publisher.rs"
  
 [[bin]]
 name = "zenoh_subscriber"
-path = "src/main.rs"
+path = "src/subscriber.rs"
 
 [dependencies]
 async-trait = { version = "0.1" }
