ustreamer: Configuring uStreamer to forward messages from zenoh endpoints 'hpc' and 'carla' to the mqtt endpoint 'threadx'. NOTE: After some tests duplicated messages from the mqtt publisher have been seen on the zenoh subscriber.

--- a/uprotocol/ustreamer/config/CONFIG.json5
+++ b/uprotocol/ustreamer/config/CONFIG.json5
@@ -26,22 +26,22 @@
             // List of endpoints that use the zenoh transport
             endpoints: [
                 {
+                    authority: "hpc",
+                    // Make sure that each endpoint has a unique identifier or the streamer will not start
+                    endpoint: "hpc_endpoint",
+                    // All endpoint identifiers listed here must also be defined in this config
+                    forwarding: [
+                        "threadx_endpoint"
+                    ]
+                },                
+                {
                     // Authority of the entity that the endpoint represents
                     authority: "carla",
                     // Identifier of the endpoint
                     endpoint: "carla_endpoint",
                     // List of identifiers of all other endpoints that messages should be forwarded to
                     forwarding: [
-                        "hpc_endpoint"
-                    ]
-                },
-                {
-                    authority: "hpc",
-                    // Make sure that each endpoint has a unique identifier or the streamer will not start
-                    endpoint: "hpc_endpoint",
-                    // All endpoint identifiers listed here must also be defined in this config
-                    forwarding: [
-                        "carla_endpoint",
+                        "threadx_endpoint"
                     ]
                 }
             ]
