--- a/EgoVehicle/Cargo.toml
+++ b/EgoVehicle/Cargo.toml
@@ -20,7 +20,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-carla = { path = "../../../temp/carla-rust/carla" }
+carla = { version = "0.11.1" }
 clap = { version = "4.5.4", features = ["derive"] }
 ctrlc = "3.4"
 log = "0.4"
@@ -28,3 +28,10 @@ pretty_env_logger = "0.4"
 tokio = { version = "1", features = ["full"] }
 zenoh = { version = "1.0.0-rc.2" }
 
+[patch.crates-io]
+# point the carla crate at your fork/branch
+carla = { git = "https://github.com/Eclipse-SDV-Hackathon-Chapter-Three/carla-rust.git", branch = "action-buffer-fix", package = "carla" }
+
+# optional but nice: also point carla-sys at the same repo (same branch)
+# (the repo contains both crates in a workspace)
+carla-sys = { git = "https://github.com/Eclipse-SDV-Hackathon-Chapter-Three/carla-rust.git", branch = "action-buffer-fix", package = "carla-sys" }
