--- a/EgoVehicle/Cargo.toml
+++ b/EgoVehicle/Cargo.toml
@@ -27,6 +27,7 @@ log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version = "1", features = ["full"] }
 up-rust = { version = "0.7.0" }
+up-transport-zenoh = { version = "0.8" }
 zenoh = { version = "1.0.0-rc.2" }
 
 [patch.crates-io]
