--- a/EgoVehicle/Cargo.toml
+++ b/EgoVehicle/Cargo.toml
@@ -25,6 +25,7 @@ clap = { version = "4.5.4", features = ["derive"] }
 ctrlc = "3.4"
 log = "0.4"
 pretty_env_logger = "0.4"
+serde = { version = "1.0" }
 tokio = { version = "1", features = ["full"] }
 up-rust = { version = "0.7.0" }
 up-transport-zenoh = { version = "0.8" }
