--- a/EgoVehicle/Cargo.toml
+++ b/EgoVehicle/Cargo.toml
@@ -26,6 +26,7 @@ ctrlc = "3.4"
 log = "0.4"
 pretty_env_logger = "0.4"
 serde = { version = "1.0" }
+serde_json = { version = "1" }
 tokio = { version = "1", features = ["full"] }
 up-rust = { version = "0.7.0" }
 up-transport-zenoh = { version = "0.8" }
