--- a/EgoVehicle/Cargo.toml
+++ b/EgoVehicle/Cargo.toml
@@ -25,6 +25,7 @@ clap = { version = "4.5.4", features = ["derive"] }
 ctrlc = "3.4"
 log = "0.4"
 nalgebra = { version = "=0.32.6", features = ["serde-serialize"] }
+ndarray = { version = "=0.15.6", features = ["serde"] }
 pretty_env_logger = "0.4"
 serde = { version = "1.0" }
 serde_json = { version = "1" }
