--- a/uprotocol/ustreamer/docker-compose.yaml
+++ b/uprotocol/ustreamer/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   ustreamer:
-    image: ghcr.io/eclipse-uprotocol/up-streamer-rust/configurable-streamer:main
+    image: ghcr.io/eclipse-uprotocol/up-streamer-rust/configurable-streamer:bugfix-weak-forwarder-cache-identification
     ports:
       - "0.0.0.0:7447:7447"
     expose:
