--- a/EgoVehicle/Cargo.toml
+++ b/EgoVehicle/Cargo.toml
@@ -17,14 +17,17 @@
 [package]
 name = "zenoh-vehicle"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
+async-trait = "0.1.89"
 carla = { path = "../../../temp/carla-rust/carla" }
 clap = { version = "4.5.4", features = ["derive"] }
 ctrlc = "3.4"
 log = "0.4"
 pretty_env_logger = "0.4"
 tokio = { version = "1", features = ["full"] }
+up-rust = "0.7.0"
+up-transport-zenoh = "0.8.0"
 zenoh = { version = "1.0.0-rc.2" }
 
