--- a/pid_controller/Cargo.toml
+++ b/pid_controller/Cargo.toml
@@ -16,8 +16,9 @@ rand = "0.9.2"
 async-trait = "0.1"
 
 # uProtocol dependencies
-up-rust = { version = "0.5.0", default-features = false }
-up-transport-zenoh = { version = "0.6.0", features = ["zenoh-unstable"] }
+# up-rust = { version = "0.5.0", default-features = false }
+up-rust = "0.7.0"
+up-transport-zenoh = "0.8.0"
 zenoh = { version = "1.2.1", features = [
     "default",
     "plugins",
