--- a/pid_controller/Cargo.toml
+++ b/pid_controller/Cargo.toml
@@ -16,25 +16,19 @@ rand = "0.9.2"
 async-trait = "0.1"
 
 # uProtocol dependencies
-# up-rust = { version = "0.5.0", default-features = false }
 up-rust = "0.7.0"
 up-transport-zenoh = "0.8.0"
-zenoh = { version = "1.2.1", features = [
-    "default",
-    "plugins",
-    "unstable",
-    "internal",
-] }
+zenoh = { version = "1.5.0" }
 
 
 [[bin]]
 name = "pid_controller"
-path = "src/pid/main.rs"
-
-[[bin]]
-name = "sim_pub"
-path = "src/test/simulator_pub.rs"
+path = "src/main.rs"
 
 [[bin]]
 name = "up_pub"
-path = "src/test/uprotocol_pub.rs"
+path = "src/testing/uprotocol_pub.rs"
+
+[[bin]]
+name = "simulator"
+path = "src/testing/simulator.rs"
